# ezscreen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 1hsg_quickstart.md  test_ligands.smi
ezscreen/: auth.py  checkpoint.py  cli.py  config.py  errors.py  notify.py  report.py  state.py  version_check.py
ezscreen/admet/: filter.py
ezscreen/backends/: engines.py
ezscreen/backends/kaggle/: dataset.py  gnina_runner.py  kernel.py  plip_runner.py  poller.py  runner.py
ezscreen/backends/kaggle/templates/: gnina_rescore.ipynb.j2  plip_analysis.ipynb.j2  vina_shard.ipynb.j2
ezscreen/backends/local/: __init__.py  runner.py  vina_binary.py
ezscreen/benchmark/: __init__.py  decoys.py  metrics.py  redock.py  runner.py
ezscreen/commands/: admet.py  auth.py  run.py  status.py  validate.py  view.py
ezscreen/libraries/: __init__.py  chembl.py  zinc.py
ezscreen/nim/: diffdock.py
ezscreen/pocket/: detect.py
ezscreen/prep/: alphafold.py  enumerate.py  ligands.py  receptor.py
ezscreen/results/: clustering.py  export.py  interactions.py  merger.py  methods.py  pose_inspector.py  pose_validity.py  report_html.py  score_types.py  variants.py
ezscreen/tui/: __init__.py  app.py  nav.py  theme.tcss
ezscreen/tui/screens/: _placeholder.py  admet_filter.py  auth_setup.py  help_overlay.py  home.py  library_browser.py  results_viewer.py  run_wizard.py  settings.py  status_monitor.py  team_accounts.py  validate_screen.py
ezscreen/tui/widgets/: breadcrumb.py  run_card.py
hooks/: pre-push
tests/: test_admet.py  test_auth.py  test_checkpoint.py  test_clustering.py  test_config.py  test_engines.py  test_enumerate.py  test_export.py  test_ligands.py  test_merger.py  test_methods.py  test_pocket.py  test_pose_validity.py  test_redock.py  test_score_types.py  test_smoke.py  test_tui_smoke.py  test_variants.py  test_zinc.py
