[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezscreen"
version = "1.1.0"
description = "GPU-accelerated virtual screening CLI — powered by Kaggle GPUs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
keywords = ["virtual-screening", "molecular-docking", "cheminformatics", "drug-discovery", "kaggle"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "tomli-w>=1.0.0",
    "kaggle>=1.6.0",
    "jinja2>=3.1.0",
    "rdkit>=2024.3.1",
    "pdbfixer>=1.9.0",
    "meeko>=0.5.0",
    "py3Dmol>=2.0.0",
    "requests>=2.31.0",
    "textual>=0.86.0,<1.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
ezscreen = "ezscreen.cli:app"

[project.urls]
Repository = "https://github.com/ChandraguptSharma07/SwiftScreen"
Issues = "https://github.com/ChandraguptSharma07/SwiftScreen/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["ezscreen"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["ezscreen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ezscreen --cov-report=term-missing"
asyncio_mode = "auto"
